# dots-rust

./: Cargo.toml  README.md
crates/dots-build/: Cargo.toml
crates/dots-build-test/: Cargo.toml  build.rs
crates/dots-build-test/proto/: types.dots
crates/dots-build-test/src/: lib.rs
crates/dots-build/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
crates/dots-build/tests/: golden.rs
crates/dots-core/: Cargo.toml
crates/dots-core/src/: any.rs  codec.rs  descriptor.rs  dynamic.rs  layout.rs  lib.rs  property_set.rs  registration.rs  temporal.rs  value.rs
crates/dots-demo-client/: Cargo.toml
crates/dots-demo-client/src/: main.rs
crates/dots-derive/: Cargo.toml
crates/dots-derive/src/: lib.rs
crates/dots-derive/tests/: any_field.rs  bare_key.rs  codec_roundtrip.rs  enum_fields.rs  global_registration.rs  merge.rs  nested_struct.rs  new_constructor.rs  static_descriptor.rs  uuid_field.rs  vec_fields.rs  wire_only_descriptors.rs
crates/dots-example/: Cargo.toml
crates/dots-example/src/: main.rs
crates/dots-model/: Cargo.toml
crates/dots-model/src/: connection.rs  daemon.rs  descriptors.rs  filter.rs  framing.rs  lib.rs  registry.rs
crates/dots-model/tests/: connection.rs  descriptors.rs  framing.rs  registry.rs
crates/dots-pinger-filtered/: Cargo.toml
crates/dots-pinger-filtered/src/: main.rs
crates/dots-rs/: Cargo.toml  README.md
crates/dots-rs-build/: Cargo.toml
crates/dots-rs-build/src/: codegen.rs  lib.rs
crates/dots-rs-build/tests/: golden.rs
crates/dots-rs-core/: Cargo.toml
crates/dots-rs-core/src/: any.rs  layout.rs  lib.rs  property_set.rs
crates/dots-rs-derive/: Cargo.toml
crates/dots-rs-derive/src/: lib.rs
crates/dots-rs-derive/tests/: any_field.rs  bare_key.rs  codec_roundtrip.rs  enum_fields.rs  global_registration.rs  merge.rs  nested_struct.rs  new_constructor.rs  static_descriptor.rs  uuid_field.rs  vec_fields.rs  wire_only_descriptors.rs
crates/dots-rs-model/: Cargo.toml
crates/dots-rs-model/src/: connection.rs  daemon.rs  descriptors.rs  filter.rs  framing.rs  lib.rs  registry.rs
crates/dots-rs-model/tests/: connection.rs  descriptors.rs  framing.rs  registry.rs
crates/dots-rs-testing/: Cargo.toml
crates/dots-rs-testing/src/: lib.rs
crates/dots-rs-testing/tests/: harness.rs
crates/dots-rs-transport/: Cargo.toml
crates/dots-rs-transport/src/: app.rs  codec.rs  connection.rs  container.rs  endpoint.rs  error.rs  filter.rs  global.rs  guest.rs  host.rs  lib.rs  tracing_init.rs  view.rs
crates/dots-rs-transport/tests/: app.rs  codec.rs  connection.rs  container.rs  filter.rs  filter_builder.rs  host.rs  preload.rs  pubsub.rs  view.rs
crates/dots-rs/src/: lib.rs
crates/dots-smarthome/: Cargo.toml  README.md  build.rs
crates/dots-smarthome/proto/: model.dots
crates/dots-smarthome/src/: basement.rs  ids.rs  lib.rs  living_room.rs  main.rs  sim.rs  stairwell.rs
crates/dots-testing/: Cargo.toml  README.md
crates/dots-testing/src/: lib.rs
crates/dots-testing/tests/: harness.rs
crates/dots-trace/: Cargo.toml
crates/dots-trace/src/: main.rs
crates/dots-transport/: Cargo.toml
crates/dots-transport/src/: app.rs  auth.rs  codec.rs  connection.rs  container.rs  endpoint.rs  error.rs  filter.rs  global.rs  guest.rs  host.rs  lib.rs  tracing_init.rs  view.rs
crates/dots-transport/tests/: app.rs  codec.rs  connection.rs  container.rs  filter.rs  filter_builder.rs  host.rs  preload.rs  pubsub.rs  view.rs
crates/dots-tui/: Cargo.toml
crates/dots-tui/src/: main.rs
crates/dotsd/: Cargo.toml
crates/dotsd/src/: main.rs
docs/: USER_GUIDE.md
