[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Thomas Schätzlein <ts@aibiot.de>"]
repository = "https://github.com/thomas-schaetzlein/dots-rust"

[workspace.dependencies]
dots-core = { path = "crates/dots-core", version = "0.1.0" }
dots-derive = { path = "crates/dots-derive", version = "0.1.0" }
dots-model = { path = "crates/dots-model", version = "0.1.0" }
dots-transport = { path = "crates/dots-transport", version = "0.1.0" }
dots-demo-client = { path = "crates/dots-demo-client", version = "0.1.0" }

minicbor = { version = "2", default-features = false, features = ["alloc"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
bytes = "1"
rustc-hash = "2"
smallvec = "1"

tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }

sha2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

[workspace.lints.rust]
# Unsafe is denied workspace-wide; the only opt-in is dots-core's internal
# `layout` module, which holds the audited raw-memory codec primitives
# behind `#![allow(unsafe_code)]`. Every other crate stays unsafe-free.
unsafe_code = "deny"
