[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "LGPL-3.0"
authors = ["Thomas Schätzlein <thomas@pnxs.de>"]
repository = "https://github.com/pnxs/dots-rust"

[workspace.dependencies]
dots-core = { path = "crates/dots-core", version = "0.1.0" }
dots-derive = { path = "crates/dots-derive", version = "0.1.0" }
dots-model = { path = "crates/dots-model", version = "0.1.0" }
dots-transport = { path = "crates/dots-transport", version = "0.1.0" }
dots-demo-client = { path = "crates/dots-demo-client", version = "0.1.0" }

minicbor = { version = "2", default-features = false, features = ["alloc"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
bytes = "1"
rustc-hash = "2"
smallvec = "1"

tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

sha2 = { version = "0.11", default-features = false }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }

[workspace.lints.rust]
# Unsafe is denied workspace-wide; the only opt-in is dots-core's internal
# `layout` module, which holds the audited raw-memory codec primitives
# behind `#![allow(unsafe_code)]`. Every other crate stays unsafe-free.
unsafe_code = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
