[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
# SPDX expression. `LGPL-3.0` (bare) is deprecated; `-only` preserves the
# "this version only" meaning. Switch to `LGPL-3.0-or-later` if desired.
license = "LGPL-3.0-only"
authors = ["Thomas Schätzlein <thomas@pnxs.de>"]
repository = "https://github.com/pnxs/dots-rust"
homepage = "https://github.com/pnxs/dots-rust"
keywords = ["pubsub", "dots", "serialization", "realtime", "tokio"]
categories = ["network-programming", "encoding"]

[workspace.dependencies]
dots-rs = { path = "crates/dots-rs", version = "0.1.0" }
dots-rs-core = { path = "crates/dots-rs-core", version = "0.1.0" }
dots-rs-derive = { path = "crates/dots-rs-derive", version = "0.1.0" }
dots-rs-model = { path = "crates/dots-rs-model", version = "0.1.0" }
dots-rs-transport = { path = "crates/dots-rs-transport", version = "0.1.0", default-features = false }
dots-rs-testing = { path = "crates/dots-rs-testing", version = "0.1.0" }
dots-rs-build = { path = "crates/dots-rs-build", version = "0.1.0" }

minicbor = { version = "2", default-features = false, features = ["alloc"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
bytes = "1"
rustc-hash = "2"
smallvec = "1"
parking_lot = "0.12"

tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

linkme = "0.3"

sha2 = { version = "0.11", default-features = false }
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }

[workspace.lints.rust]
# Unsafe is denied workspace-wide; the only opt-in is dots-core's internal
# `layout` module, which holds the audited raw-memory codec primitives
# behind `#![allow(unsafe_code)]`. Every other crate stays unsafe-free.
unsafe_code = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
