[package]
name = "dots-build-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Compile-test for dots-build: parses .dots files via build.rs and includes the generated source."

[dependencies]
dots-core.workspace = true
dots-derive.workspace = true

[build-dependencies]
dots-build = { path = "../dots-build", version = "0.1.0" }

[lints]
workspace = true
