[package]
name = "dots-build-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Compile-test for dots-rs-build: parses .dots files via build.rs and includes the generated source."

[dependencies]
dots-rs.workspace = true

[build-dependencies]
dots-rs-build = { path = "../dots-rs-build", version = "0.1.0" }

[lints]
workspace = true
