[package]
name = "dots-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Procedural macros for dots-rust: #[derive(DotsStruct)]."

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
dots-core.workspace = true
# Derived code references `::dots_model::filter::Attr` constants per
# scalar field; integration tests therefore need dots-model in scope.
dots-model.workspace = true

[lints]
workspace = true
