[package]
name = "dots-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Demonstrates the dots-rust type-system foundation."

[dependencies]
dots-core.workspace = true
dots-derive.workspace = true

[lints]
workspace = true
