[package]
name = "dots-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Demonstrates the dots-rust type-system foundation."

[dependencies]
dots-core.workspace = true
dots-derive.workspace = true
# Derive macros emit `::dots_model::filter::Attr<...>` constants for
# every DSL-supported leaf field; consumers therefore need dots-model
# as a runtime dep even when they only use the typed-struct surface.
dots-model.workspace = true

[lints]
workspace = true
