[package]
name = "dots-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DOTS-internal types: descriptors, connection, events. Mirrors the .dots model files from dots-cpp."

[dependencies]
dots-core.workspace = true
dots-derive.workspace = true

[lints]
workspace = true
