[package]
name = "dots-pinger-filtered"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "End-to-end smoke test of server-side filtered subscriptions — opens a View<Pinger> with predicate (sequence < 100) and exercises the broker's four-cases dispatch."

[dependencies]
dots-rs = { workspace = true, features = ["tracing-init"] }

tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
rand.workspace = true

[lints]
workspace = true
