[package]
name = "dots-rs-build"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compile .dots files into Rust source via build.rs."

[lints]
workspace = true
