[package]
name = "dots-rs-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DOTS-internal types: descriptors, connection, events. Mirrors the .dots model files from dots-cpp."

[dependencies]
dots-rs-core.workspace = true
dots-rs-derive.workspace = true

bytes.workspace = true

[lints]
workspace = true
