[package]
name = "dots-rs-testing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "In-process Host + Guest test harness for dots-rust — write unit tests against the global DOTS API without a broker socket."

[dependencies]
dots-rs-core.workspace = true
dots-rs-model.workspace = true
dots-rs-transport.workspace = true

tokio = { workspace = true, features = ["io-util", "sync", "rt", "time", "macros"] }
tracing.workspace = true

[dev-dependencies]
# Path-only (no version) so they are stripped from the published manifest;
# tests derive types whose generated code routes through `::dots_rs::__rt`.
dots-rs-derive = { path = "../dots-rs-derive" }
dots-rs = { path = "../dots-rs" }
tokio = { workspace = true, features = ["io-util", "sync", "rt", "rt-multi-thread", "time", "macros"] }

[lints]
workspace = true
