[package]
name = "dots-trace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "DOTS trace tool — connects to a broker and prints every transmission as it arrives."

[dependencies]
dots-rs-core.workspace = true
dots-rs-model.workspace = true
dots-rs-transport = { workspace = true, features = ["tracing-init"] }

tokio = { workspace = true, features = ["macros", "net", "rt", "signal", "time"] }

[lints]
workspace = true
