[package]
name = "dotsd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "DOTS broker daemon — listens on TCP and routes pub/sub between guests."

[dependencies]
dots-core.workspace = true
dots-model.workspace = true
dots-transport = { workspace = true, features = ["tracing-init"] }

tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "signal"] }
tracing.workspace = true

[lints]
workspace = true
